--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "date-fns": "^2.27.0",
     "next": "^13.5.2",
     "react": "^18.2.0",
